--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "start": "sirv public",
     "validate": "svelte-check",
     "predeploy": "npm run build",
-    "deploy": "npx gh-pages -d public/"
+    "deploy": "npx gh-pages -d public/",
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/svelte": "^3.0.0",
     "@tsconfig/svelte": "^1.0.0",
+    "@types/jest": "^26.0.19",
+    "jest": "^26.6.3",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -22,7 +28,9 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
+    "svelte-jester": "^1.3.0",
     "svelte-preprocess": "^4.0.0",
+    "ts-jest": "^26.4.4",
     "tslib": "^2.0.0",
     "tslint": "^6.1.3",
     "typescript": "^3.9.3"
@@ -31,5 +39,21 @@
     "canvas-confetti": "^1.3.2",
     "node-sass": "^5.0.0",
     "sirv-cli": "^1.0.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.svelte$": [
+        "svelte-jester",
+        {
+          "preprocess": true
+        }
+      ],
+      "^.+\\.ts$": "ts-jest"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "svelte"
+    ]
   }
 }
