--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "dependencies": {
     "canvas-confetti": "^1.3.2",
     "node-sass": "^5.0.0",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-navigator": "^3.1.5"
   },
   "jest": {
     "transform": {
