--- a/package.json
+++ b/package.json
@@ -1,60 +1,69 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "homepage": "https://rolandisimo.github.io/bs-bingo/",
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
-    "validate": "svelte-check",
-    "predeploy": "npm run build",
-    "deploy": "npx gh-pages -d public/",
-    "test": "jest",
-    "test:watch": "npm test -- --watch"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^16.0.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/svelte": "^3.0.0",
-    "@tsconfig/svelte": "^1.0.0",
-    "@types/jest": "^26.0.19",
-    "jest": "^26.6.3",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.0.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-check": "^1.0.0",
-    "svelte-jester": "^1.3.0",
-    "svelte-preprocess": "^4.0.0",
-    "ts-jest": "^26.4.4",
-    "tslib": "^2.0.0",
-    "tslint": "^6.1.3",
-    "typescript": "^3.9.3"
-  },
-  "dependencies": {
-    "canvas-confetti": "^1.3.2",
-    "node-sass": "^5.0.0",
-    "sirv-cli": "^1.0.0",
-    "svelte-navigator": "^3.1.5"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.svelte$": [
-        "svelte-jester",
-        {
-          "preprocess": true
-        }
-      ],
-      "^.+\\.ts$": "ts-jest"
+    "name": "svelte-app",
+    "version": "1.0.0",
+    "homepage": "https://rolandisimo.github.io/bs-bingo/",
+    "scripts": {
+        "build": "rollup -c",
+        "dev": "rollup -c -w",
+        "start": "sirv public",
+        "validate": "svelte-check",
+        "predeploy": "npm run build",
+        "deploy": "npx gh-pages -d public/",
+        "cypress:open": "cypress open",
+        "test": "jest",
+        "test:watch": "npm test -- --watch"
     },
-    "moduleFileExtensions": [
-      "js",
-      "ts",
-      "svelte"
-    ]
-  }
+    "devDependencies": {
+        "@cypress/browserify-preprocessor": "^3.0.1",
+        "@rollup/plugin-commonjs": "^16.0.0",
+        "@rollup/plugin-node-resolve": "^10.0.0",
+        "@rollup/plugin-typescript": "^6.0.0",
+        "@testing-library/jest-dom": "^5.11.6",
+        "@testing-library/svelte": "^3.0.0",
+        "@tsconfig/svelte": "^1.0.0",
+        "@types/cypress-cucumber-preprocessor": "^4.0.1",
+        "@types/jest": "^26.0.19",
+        "cypress": "^8.6.0",
+        "cypress-cucumber-preprocessor": "^4.3.0",
+        "jest": "^26.6.3",
+        "rollup": "^2.3.4",
+        "rollup-plugin-css-only": "^3.0.0",
+        "rollup-plugin-livereload": "^2.0.0",
+        "rollup-plugin-svelte": "^7.0.0",
+        "rollup-plugin-terser": "^7.0.0",
+        "svelte": "^3.0.0",
+        "svelte-check": "^1.0.0",
+        "svelte-jester": "^1.3.0",
+        "svelte-preprocess": "^4.0.0",
+        "ts-jest": "^26.4.4",
+        "tslib": "^2.0.0",
+        "tslint": "^6.1.3",
+        "typescript": "^3.9.3"
+    },
+    "dependencies": {
+        "canvas-confetti": "^1.3.2",
+        "node-sass": "^5.0.0",
+        "sirv-cli": "^1.0.0",
+        "svelte-navigator": "^3.1.5",
+        "tsify": "^5.0.4"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.svelte$": [
+                "svelte-jester",
+                {
+                    "preprocess": true
+                }
+            ],
+            "^.+\\.ts$": "ts-jest"
+        },
+        "moduleFileExtensions": [
+            "js",
+            "ts",
+            "svelte"
+        ]
+    },
+    "cypress-cucumber-preprocessor": {
+        "nonGlobalStepDefinitions": true
+    }
 }
